ALMOST DONE WITH MY THOUGHTS!!!! holy molyyyyyyy the formatting is all good, i fized some issues with scrolling not being allowed by messing with overflow-y and the predefined width/height of the tabs

--- a/style.css
+++ b/style.css
@@ -420,3 +420,39 @@ h5 {
     text-align: center;
     font-size: 26px;
 }
+
+#reconstruct {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#talkingraidenyap {
+    margin: 20px;
+    padding: 30px;
+    font-family: "Geist Pixel";
+    overflow-y: scroll;
+}
+
+#ilovefraudyap {
+    margin: 30px;
+    padding: 20px;
+    font-family: "Geist Pixel";
+    overflow-y: scroll;
+    top: 200px;
+    left: 100px;
+    background-color: white;
+    border-radius: 20px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: gray;
+}
+
+#ilovefraud {
+    width: 60%;
+}
+
+#talkingraiden {
+    height: 100%;
+    width: 100%;
+}
